# dosadi_experiment

./: CMakeLists.txt  README
covar_splines/: README  build_uboone_covar_template.xml  filespdf.list  runall_covar1.sh  runall_covar2.sh  runall_covar3.sh  runall_covar4.sh  runall_covar_all.sh  syst1.txt  syst2.txt  syst3.txt  syst4.txt  syst_all.txt
src/: CMakeLists.txt  LinkDef.h  SBNcovar.bk  SBNcovar.cxx  SBNcovar.cxx.bk  SBNcovar.cxx.broke  build_microboone_covariance.cxx  core_correlations.c  old_sbncovar.bk  speedtest.cxx  two_dim_test.cxx
xml/: build_uboone_covar.xml  build_uboone_covar_angle.xml  build_uboone_covar_angle_nue.xml
